--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
 appdirs==1.4.3
+certifi==2017.4.17
+chardet==3.0.4
+click==6.7
+decorator==4.0.11
 Django==1.11.1
+geocoder==1.22.6
+idna==2.5
 packaging==16.8
 pyparsing==2.2.0
 pytz==2017.2
+ratelim==0.1.6
+requests==2.18.1
 six==1.10.0
+urllib3==1.21.1
